Update test case to test two filter sets

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -64,6 +64,7 @@ analyses:
 
 filter_beds:
   example: "config/example-filt.bed"
+  badexample: "config/badexample-filt.bed"
 
 only_filter_beds: false
 
