--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -138,7 +138,9 @@ if config["analyses"]["heterozygosity_angsd"]:
     )
 
 if config["analyses"]["inbreeding_ngsf-hmm"]:
-    all_outputs.append("results/datasets/{dataset}/plots/inbreeding/{dataset}.{ref}_all{dp}_{sites}-filts.froh.pdf")
+    all_outputs.append(
+        "results/datasets/{dataset}/plots/inbreeding/{dataset}.{ref}_all{dp}_{sites}-filts.froh.pdf"
+    )
 
 if config["analyses"]["admix_ngsadmix"]:
     if config["excl_pca-admix"]:
