--- a/config/config.yaml
+++ b/config/config.yaml
@@ -87,6 +87,10 @@ params:
     extra: "-C 50 -uniqueOnly 1"
     snp_pval: "1e-6"
     min_maf: 0.05
+  ngsld:
+    rnd_sample: 0.1 # For fitting LD curve only - pruning will always use all sites regardless of what is set here
+    fit_extra: ""
+    n_correction: False # Do correction for 1-parameter r^2 fitting
   realsfs:
     fold: 1 # Should only be set to 1 for now
     sfsboot: 100
