--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -13,10 +13,11 @@ include: "rules/2.2_dna_damage.smk"
 include: "rules/3.0_genotype_likelihoods.smk"
 include: "rules/3.1_safs.smk"
 include: "rules/3.2_beagles.smk"
-include: "rules/3.3_linkage_pruning.smk"
-include: "rules/4.0_relatedness.smk"
-include: "rules/5.0_pca.smk"
-include: "rules/6.0_admixture.smk"
+include: "rules/4.0_linkage_pruning.smk"
+include: "rules/4.1_linkage_decay.smk"
+include: "rules/5.0_relatedness.smk"
+include: "rules/6.0_pca.smk"
+include: "rules/6.1_admixture.smk"
 include: "rules/7.0_SFS.smk"
 include: "rules/7.1_thetas.smk"
 include: "rules/7.2_fst.smk"
@@ -68,6 +69,10 @@ if config["analyses"]["endogenous_content"]:
     all_outputs.append(
         "results/datasets/{dataset}/qc/endogenous_content/{dataset}.{ref}_all.endo.tsv"
     )
+
+if config["analyses"]["ld_decay"]:
+    all_outputs.extend(expand("results/datasets/{{dataset}}/plots/LD_decay/{{dataset}}.{{ref}}_{population}{{dp}}_{{sites}}-filts.LDdecay.svg",
+        population=pop_list+["all"]))
 
 if config["analyses"]["relatedness"]["ngsrelate"]:
     all_outputs.append(
