--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -90,6 +90,8 @@ params:
     snp_pval: "1e-6"
     min_maf: 0.05
   ngsld:
+    max_kb_dist_pruning: 100
+    max_kb_dist_sampling: 4000
     rnd_sample: 0.9 # For fitting LD curve only - pruning will always use all sites regardless of what is set here
     fit_extra: "--fit_level 3 --plot_data"
     n_correction: True # Do correction for 1-parameter r^2 fitting
