Updating linkage based rules
Implement rule to output LD estimates independently of performing
linkage pruning or estimating LD decay.

Allow setting of independent max_kb_dist values for estimating LD, LD
decay, and linkage pruning.

Updating configuration readme to reflect new options.

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -47,6 +47,7 @@ analyses:
   damageprofiler: true
   endogenous_content: true
   # population genomic analyses
+  estimate_ld: true
   ld_decay: true
   pca_pcangsd: true
   admix_ngsadmix: true
@@ -90,11 +91,14 @@ params:
     snp_pval: "1e-6"
     min_maf: 0.05
   ngsld:
-    max_kb_dist_pruning: 100
-    max_kb_dist_sampling: 4000
-    rnd_sample: 0.9 # For fitting LD curve only - pruning will always use all sites regardless of what is set here
-    fit_extra: "--fit_level 3 --plot_data"
-    n_correction: True # Do correction for 1-parameter r^2 fitting
+    max_kb_dist_est-ld: 200
+    max_kb_dist_decay: 100
+    max_kb_dist_pruning: 50
+    rnd_sample_est-ld: 0.001
+    rnd_sample_decay: 0.9
+    fit_LDdecay_extra: "--fit_level 3"
+    fit_LDdecay_n_correction: true
+    pruning_min-weight: 0.1
   realsfs:
     fold: 1 # Should only be set to 1 for now
     sfsboot: 100
