--- a/config/config.yaml
+++ b/config/config.yaml
@@ -108,6 +108,7 @@ params:
   thetas:
     win_size: 50000
     win_step: 10000
+    minsites: 1000
   ngsadmix:
     kvalues: [1,2,3,4]
     reps: 100
