--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,6 +50,7 @@ jobs:
     needs:
       - build
     steps:
+    - uses: actions/checkout@v3.5.2
     - name: Linting
       uses: snakemake/snakemake-github-action@v1.24.0
       with:
@@ -62,6 +63,8 @@ jobs:
       - linting
       - formatting
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3.5.2
     - name: Set up conda environment and singularity
       uses: mamba-org/provision-with-micromamba@v15
       with:
