See if removing snakemake github action helps it run

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,10 +67,9 @@ jobs:
       run: |
         snakemake --directory .test --configfile .test/config/config.yaml --use-conda --show-failed-logs --cores 2 --conda-cleanup-pkgs cache --use-singularity --default-resources mem_mb=1000
     - name: Test report
-      uses: snakemake/snakemake-github-action@v1.24.0
-      with:
-        snakefile: "workflow/Snakefile"
-        args: "--configfile .test/config/config.yaml --report report.html"
+      shell: bash -l {0}
+      run: |
+        snakemake --directory .test --configfile .test/config/config.yaml --cores 2 --report report.html
     - name: After space
       run: |
         echo "Free space:"
