--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,6 +44,7 @@ jobs:
       uses: easimon/maximize-build-space@master
       with:
         root-reserve-mb: 4096
+        temp-reserve-mb: 4096
         swap-size-mb: 1024
         remove-dotnet: 'true'
         remove-android: 'true'
