--- a/config/config.yaml
+++ b/config/config.yaml
@@ -87,7 +87,7 @@ params:
   angsd:
     gl_model: 2 # gl_model - 1=SAMtools, 2=GATK, 3=SOAPsnp, 4=SYK
     maxdepth: 1000
-    extra: "-C 50 -uniqueOnly 1"
+    extra: ""
     snp_pval: "1e-6"
     min_maf: 0.05
   ngsld:
