Fix PCA/Admix relative removal
Relative removal was working, but only because of
an oversight in the 'sites' wildcard that allowed it.
This will make the relative removal more stable,
and prevent failing upon plotting by creating a
proper sample list (I think...).

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -49,6 +49,7 @@ wildcard_constraints:
     ),
     dp=(subsample[0] + "|.{0}" if len(subsample) == 2 else ".{0}"),
     chunk="[0-9]+",
+    sites="|".join(filters),
 
 
 # Accumulate desired output files from config file
