Add IBSrelate IBS method Fixes #14

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -52,7 +52,8 @@ analyses:
   admix_ngsadmix: true
   relatedness: 
     ngsrelate: true
-    waples2019: true
+    ibsrelate_ibs: true
+    ibsrelate_sfs: true
   thetas_angsd: true
   heterozygosity_angsd: true
   fst_angsd:
@@ -86,7 +87,7 @@ params:
   angsd:
     gl_model: 2 # gl_model - 1=SAMtools, 2=GATK, 3=SOAPsnp, 4=SYK
     maxdepth: 1000
-    extra: "-C 50 -uniqueOnly 1"
+    extra: ""
     snp_pval: "1e-6"
     min_maf: 0.05
   ngsld:
