--- a/config/config.yaml
+++ b/config/config.yaml
@@ -44,7 +44,7 @@ analyses:
     local_lib:
     dfam_lib:
     build_lib: true
-  extreme_depth: [0.5, 1.5]
+  extreme_depth: true
   dataset_missing_data: 0.8
   population_missing_data: 0.8
   # quality control
@@ -79,12 +79,16 @@ only_filter_beds: false
 mapQ: 30
 baseQ: 30
 
-params:
-
+params:: true
   genmap:
     K: "100"
     E: "2"
     map_thresh: 1
+  extreme_depth_filt:
+    method: "median"
+    bounds: [ 0.5, 1.5 ]
+    filt-on-dataset: true
+    filt-on-depth-classes: true
   fastp:
     extra: "-p -g" # don't put --merge or --overlap_len_require here, they're implicit
     min_overlap_mod: 30
