Convert mappability filter to pileup mappability

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -37,7 +37,7 @@ analyses:
   mapping:
     historical_only_collapsed: true
   # filtering
-  genmap: true
+  pileup-mappability: true
   repeatmasker:
     local_lib:
     dfam_lib:
