--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -48,6 +48,7 @@ analyses:
   # quality control
   qualimap: true
   damageprofiler: true
+  mapdamage_rescale: true
   # population genomic analyses
   estimate_ld: true
   ld_decay: true
@@ -79,6 +80,8 @@ mapQ: 30
 baseQ: 30
 
 params:
+  clipoverlap:
+    clip_user_provided_bams: true
   genmap:
     K: "100"
     E: "2"
