--- a/config/config.yaml
+++ b/config/config.yaml
@@ -50,6 +50,7 @@ analyses:
   # quality control
   qualimap: true
   damageprofiler: true
+  mapdamage_rescale: true
   # population genomic analyses
   estimate_ld: false
   ld_decay: false
@@ -80,6 +81,8 @@ mapQ: 30
 baseQ: 30
 
 params: true
+  clipoverlap:
+    clip_user_provided_bams: true
   genmap:
     K: "100"
     E: "2"
