Make sure all the needed tools are in environment for testing

--- a/environment.yaml
+++ b/environment.yaml
@@ -8,5 +8,9 @@ channels:
 dependencies:
   # core packages for workflow
   - snakemake-minimal =7.32.*
+  - python =3.11.*
+  - pandas =2.0.1
   - mamba
+  - graphviz
+  - pygments
   - pulp =2.7.*
