Allow user input repeat bed files
Avoids having to run repeatmodeler/masker if it has already been run elsewhere for a genome and a bed/gff file can be provided.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -42,6 +42,7 @@ analyses:
   # filtering
   pileup-mappability: true
   repeatmasker:
+    bed:
     local_lib:
     dfam_lib:
     build_lib: true
