--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -40,6 +40,7 @@ analyses:
   # filtering
   pileup-mappability: true
   repeatmasker:
+    bed:
     local_lib:
     dfam_lib:
     build_lib: true
