Fix: Prevent damageprofiler from running when user bam is provided
If desired, damageprofiler on user provided bams can be added sometime, but for now its only used when starting from fastq. Assuming that user provided bams have been processed and damage assessed already.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -73,8 +73,13 @@ if config["analyses"]["qualimap"]:
     )
 
 if config["analyses"]["damageprofiler"]:
-    all_outputs.append(
-        "results/mapping/qc/damageprofiler/{histsample}.{ref}/dmgprof.json"
+    all_outputs.extend(
+        expand(
+            "results/mapping/qc/damageprofiler/{histsample}.{{ref}}/dmgprof.json",
+            histsample=list(
+                set(pipebams) & set(samples.index[samples["time"] == "historical"])
+            ),
+        )
     )
 
 if config["analyses"]["estimate_ld"]:
@@ -208,7 +213,6 @@ rule all:
             all_outputs,
             sample=samples.index,
             ref=config["reference"]["name"],
-            histsample=samples.index[samples["time"] == "historical"].tolist(),
             dataset=config["dataset"],
             dp=subsample,
             sites=filters,
