--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -60,27 +60,31 @@ all_outputs = [
 ]
 
 if config["analyses"]["qualimap"]:
-    all_outputs.extend(
-        expand(
-            "results/mapping/qc/qualimap/{sample}.{{ref}}/report.pdf", sample=pipebams
+    if len(pipebams) > 0:
+        all_outputs.extend(
+            expand(
+                "results/mapping/qc/qualimap/{sample}.{{ref}}/report.pdf", sample=pipebams
+            )
         )
-    )
-    all_outputs.extend(
-        expand(
-            "results/datasets/{{dataset}}/qc/user-provided-bams/qualimap/{sample}.{{ref}}/report.pdf",
-            sample=userbams,
+    if len(userbams) > 0:
+        all_outputs.extend(
+            expand(
+                "results/datasets/{{dataset}}/qc/user-provided-bams/qualimap/{sample}.{{ref}}/report.pdf",
+                sample=userbams,
+            )
         )
-    )
+
 
 if config["analyses"]["damageprofiler"]:
-    all_outputs.extend(
-        expand(
-            "results/mapping/qc/damageprofiler/{histsample}.{{ref}}/dmgprof.json",
-            histsample=list(
-                set(pipebams) & set(samples.index[samples["time"] == "historical"])
-            ),
+    if len(pipebams) > 0:
+        all_outputs.extend(
+            expand(
+                "results/mapping/qc/damageprofiler/{histsample}.{{ref}}/dmgprof.json",
+                histsample=list(
+                    set(pipebams) & set(samples.index[samples["time"] == "historical"])
+                ),
+            )
         )
-    )
 
 if config["analyses"]["estimate_ld"]:
     all_outputs.extend(
