--- a/config/config.yaml
+++ b/config/config.yaml
@@ -38,7 +38,7 @@ analyses:
   # mapping options
   mapping:
     historical_only_collapsed: true
-    historical_aligner: "aln"
+    historical_collapsed_aligner: "aln"
   # filtering
   pileup-mappability: true
   repeatmasker:
@@ -96,7 +96,6 @@ params:
     filt-on-depth-classes: true
   fastp:
     extra: "-p -g" # don't put --merge or --overlap_len_require here, they're implicit
-    min_overlap_mod: 30
     min_overlap_hist: 15
   bwa_aln:
     extra: "-l 16500 -n 0.01 -o 2"
